--- a/dz5/package.json
+++ b/dz5/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/mvk85/node_course#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.37.4"
   }
 }
